--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body{
 .container{
     height: 370px;
     width: 370px;
-    border: 1px solid white;
     position: absolute;
     margin: auto;
     top: 0;
@@ -92,3 +91,102 @@ body{
 
 
 }
+
+
+.eye{
+    height: 12px;
+    width: 12px;
+    background-color: #161616;
+    position: relative;
+    border-radius: 50%;
+}
+
+.eye-l {
+    bottom: 255px;
+    left: 59px;
+}
+
+.eye-r{
+    bottom: 267px;
+    left: 101px;
+}
+
+.mouth{
+    height: 5px;
+    width: 10px;
+    border: 3px solid #161646;
+    position:relative;
+    bottom: 262px;
+    left: 79px;
+    border-top: none;
+    border-radius: 0 0 10px 10px;
+
+}
+
+
+.orbit{
+    height: 280px;
+    width: 280px;
+    border-radius: 50%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    animation: spin 5s infinite linear;
+}
+
+@keyframes spin{
+    100%{
+        transform: rotate(360deg);
+    }
+
+}
+
+.rocket{
+    background-color: white;
+    height: 50px;
+    width: 25px;
+    border-radius: 50% 50% 0 0;
+    position: relative;
+    left: -11px;
+    top: 115px;
+
+}
+
+.rocket:before{
+    position: absolute;
+    content: "";
+    background-color: #39beff;
+    height: 20px;
+    width: 55px;
+    z-index: -1;
+    border-radius: 50% 50% 0 0;
+    right: -15px;
+    bottom: 0;
+
+}
+
+.rocket:after{
+    position: absolute;
+    content: "";
+    background-color: #39beff;
+    height: 4px;
+    width: 15px;
+    bottom: -4px;
+    left: 4.3px;
+}
+
+.window{
+    height: 10px;
+    width: 10px;
+    background-color: #151845;
+    border: 2px solid #b8d2ec;
+    border-radius: 50%;
+
+    position: relative;
+    left: 5px;
+    top: 17px;
+}
+
